implement cascading soft-delete service for hierarchical entities